Refactor ones tests.